Desenvolvimento tela login

--- a/SP-MED/Frontend/login.html
+++ b/SP-MED/Frontend/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=n, initial-scale=1.0">
-    <title>Página Login</title>
+    <title>Login</title>
+    <link rel="shortcut icon" href="assets/img/logoo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style_login.css">
 </head>
 <body>
@@ -14,6 +15,41 @@
             <h2 class="login">Login</h2>
         </div>
     </header>
+    <main>
+        <div class="principal">
+            <div>
+                <form class="formulario">
+                    <h1>Faça login com seus dados</h1>
+                    <div>
+                        <input type="" id="" name="" value="" placeholder="Nome de usuário "><br>
+                    </div>
+                    <div>
+                        <input type="password" id="senha" name="senha" value="" placeholder="Senha"><br><br>
+                    </div>
+                    <div>
+                        <label for="Senha">Lembre-se de mim</label>
+                        <button></button>
+                    </div>
+                    <button type="submit">Entre</button>
+                    <label for="Cadastrar">Não possui conta?</label>
+                    <button type="submit">Cadastrar</button>
+                    <div>
+                        <hr>
+                        <h1>ou</h1>
+                        <hr>
+                        <label for="Cadastrar">Você pode acessar sua conta utlizando</label>
+                        <div>
+                            <input type=image src="./assets/img/sinal_mais.png" width="" height=""> 
+                            <input type=image src="./assets/img/sinal_google.png" width="" height=""> 
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+    </footer>
 
 </body>
 </html>
