--- a/SP-MED/Frontend/login.html
+++ b/SP-MED/Frontend/login.html
@@ -12,19 +12,19 @@
 
     <header>
         <div class="container container_header">
-            <h2 class="login">Login</h2>
+            <h2 class="login">LOGIN </h2>
         </div>
     </header>
     <main>
         <div class="principal">
             <div>
                 <form class="formulario">
-                    <h1>Faça login com seus dados</h1>
+                    <h1 class="faça_login">Faça login com seus dados</h1>
                     <div>
-                        <input type="" id="" name="" value="" placeholder="Nome de usuário "><br>
+                        <input class="caixa_texto" type="" id="" name="" value="" placeholder="Nome de usuário "><br>
                     </div>
                     <div>
-                        <input type="password" id="senha" name="senha" value="" placeholder="Senha"><br><br>
+                        <input class="caixa_texto" type="password" id="senha" name="senha" value="" placeholder="Senha"><br><br>
                     </div>
                     <div>
                         <label for="Senha">Lembre-se de mim</label>
@@ -34,13 +34,11 @@
                     <label for="Cadastrar">Não possui conta?</label>
                     <button type="submit">Cadastrar</button>
                     <div>
-                        <hr>
-                        <h1>ou</h1>
-                        <hr>
-                        <label for="Cadastrar">Você pode acessar sua conta utlizando</label>
-                        <div>
-                            <input type=image src="./assets/img/sinal_mais.png" width="" height=""> 
-                            <input type=image src="./assets/img/sinal_google.png" width="" height=""> 
+                        <h1 class="opçoes_cadastro">ou</h1>
+                        <label class="opçoes_cadastro" for="Cadastrar">Você pode acessar sua conta utlizando</label>
+                        <div class="imagem">
+                            <input type=image src="./assets/img/sinal_mais.png" width="130px" height="130px"> 
+                            <input type=image src="./assets/img/sinal_google.png" width="90px" height="90px"> 
                         </div>
                     </div>
                 </form>
