--- a/SP-MED/Frontend/login.html
+++ b/SP-MED/Frontend/login.html
@@ -20,7 +20,7 @@
     <main>
         <div class="principal">
             <div>
-                <form class="formulario">
+                <form method="POST" class="formulario">
                     <h1 class="faça_login">Faça login com seus dados</h1>
                     <div class="formulario_e_s">
                         <input class="caixa_texto" type="" id="" name="" value="" placeholder="Nome de usuário "><br>
