Home em andamento

--- a/SP-MED/Frontend/home.html
+++ b/SP-MED/Frontend/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,22 @@
     <link rel="shortcut icon" href="assets/img/logoo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/home.css">
 </head>
+
 <body>
     <header>
         <div class="container container_header">
-            <h2 class="login">LOGIN </h2>
+            <nav class="menu_header">
+                <div class="selecionado">
+                    <a href="">Início</a>
+                    <hr>
+                </div>
+                <a href="">Ajuda</a>
+                <a href="">Consultas</a>
+                <span>Faça login para acessar sua conta</span>
+            </nav>
         </div>
     </header>
     <main></main>
 </body>
+
 </html>
