--- a/SP-MED/Frontend/home.html
+++ b/SP-MED/Frontend/home.html
@@ -24,7 +24,54 @@
             </nav>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="container">
+            <div class="comeco">
+                <div class="introducao">
+                    <h1>Clínica SP-MEDICAL GROUP</h1>
+                    <h2>Venha conhecer nossos serviços, cadastre uma consulta agora mesmo!</h2>
+                    <button>Cadastrar</button>
+                </div>
+                <img src="./assets/img/home-medicos.jpg" alt="medicos-representação">
+            </div>
+       </div>
+        <div>
+            <div class="comeco2">
+                <div>
+                    <h1 class="texto">.</h1>
+                    <div class="cards_geral container">
+                        <div class="cards">
+                            <input type=image src="./assets/img/perfil.png" width="150px"
+                            height="150px">
+                            <imgalt="">
+                            <div class="pfc">
+                                <p>Perfil</p>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <input type=image src="./assets/img/lupa.png" width="150px"
+                            height="150px">
+                            <div class="pfc">   
+                                <p>Listar consulta</p>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <input type=image src="./assets/img/whatsapp (1).png" width="150px"
+                            height="150px">
+                            <div class="pfc">
+                                <p>Converse conosco</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <img src="" alt="">
+            </div>
+        </div>
+    </main>
+    <footer>
+    </footer>
+
 </body>
 
 </html>
